testsuite/tests/misc/invalid_static_expr/invalid_concat_2.lkt
import common

@repr_name("foo" & true)
class FooNode implements Node[FooNode] {
}
